--- a/src/assets/css/admin.css
+++ b/src/assets/css/admin.css
@@ -7,15 +7,25 @@
 .admin-nav {
   width: 200px;
   margin-top: 10px !important;
-  background-color: #244497;
 }
 
 .admin-nav nav {
   box-sizing: border-box;
-  color: white;
+  color: #fff;
   width: 100%;
   height: 50px;
   text-align: center;
   padding: 14px;
   cursor: pointer;
+}
+
+.admin-content {
+  width: 100%;
+  height: 100%;
+}
+
+.admin-content-header {
+  color: #fff;
+  box-sizing: border-box;
+  padding: 20px 0 20px 42px;
 }
