--- a/src/assets/css/admin.css
+++ b/src/assets/css/admin.css
@@ -29,3 +29,45 @@
   box-sizing: border-box;
   padding: 20px 0 20px 42px;
 }
+
+.admin-notice-register {
+  margin: 10px 0 10px 55px;
+  width: 90px;
+  height: 45px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.admin-notice-register:hover {
+  background-color: #3f5998;
+}
+
+.admin-content-main {
+  border: 0.75px solid #000;
+  height: 850px;
+  margin: 0 55px;
+}
+
+.admin-content-list {
+  border-bottom: 0.75px solid #000;
+  width: 100%;
+  height: 44px;
+  padding-top: 11px;
+  box-sizing: border-box;
+}
+
+.admin-content-number {
+  width: 60px;
+  height: 100%;
+  text-align: center;
+}
+
+.admin-content-title {
+  width: 80%;
+}
+
+.admin-content-date {
+  width: 200px;
+  text-align: center;
+  justify-content: center;
+}
