--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -10,6 +10,10 @@
   font-size: 30px;
 }
 
+.f-20 {
+  font-size: 20px;
+}
+
 .fw-600 {
   font-weight: 600;
 }
@@ -21,4 +25,8 @@
 body {
   width: 100%;
   height: 100%;
+}
+
+a {
+  text-decoration: none;
 }
