--- a/src/assets/css/admin.css
+++ b/src/assets/css/admin.css
@@ -19,6 +19,37 @@
   cursor: pointer;
 }
 
+@keyframes nav-slide {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.admin-tech {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  border-left: 0.75px solid #244497;
+  border-right: 1px solid #244497;
+}
+
+.admin-tech-show {
+  overflow: hidden;
+  transition: max-height 0.3s ease-out;
+}
+
+.admin-tech-hide {
+  display: none;
+  transition: 1s;
+}
+
+.admin-tech-nav {
+  background-color: #fff;
+  color: #244497 !important;
+}
 .admin-content {
   width: 100%;
   height: 100%;
